# SupplyTrace-VEX

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/audit/: artifact_inventory.csv  debug_evidence_report.md  debug_evidence_summary.csv  evidence_readiness_report.md  evidence_readiness_summary.csv  evidence_readiness_summary.json  final_audit_report.md  known_limitations.md  new_chat_precheck_report.md  publication_readiness_score.csv  reproducibility_checklist.csv  tool_availability_summary.csv
artifacts/evaluation/: baseline_comparison.csv  baseline_rankings.csv  evaluation_notes.md  evaluation_summary.json  evidence_completeness.csv  metrics_summary.csv  risk_scores.csv  risk_scores.json  scanner_disagreement.csv  scoring_warnings.csv
artifacts/figures_data/: ablation_chart_data.csv  (+7 more)
docs/: ethics.md  github_release_checklist.md  limitations.md  manuscript_support.md  methodology.md  reproducibility.md  scanner_installation.md  validation_protocol.md
scripts/: clean_release.ps1  clean_release.sh  generate_report.sh  run_full_pipeline.sh  run_scanners.sh
supplytrace/: __init__.py  __main__.py  audit.py  cli.py  config.py  logging_utils.py  run_context.py
tests/: test_artifact_paths.py  test_cli.py  test_config.py  test_evaluation.py  test_evidence_readiness.py  test_normalize_findings.py  test_reachability.py  test_reporting.py  test_sbom_generation.py  test_scanners.py  test_scoring.py  test_testbed_builder.py  test_vex_generation.py
(+308 files in other folders)
