[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplytrace-vex"
version = "0.1.0"
description = "Defensive research artifact for context-aware software supply-chain vulnerability prioritization."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "SupplyTrace-VEX contributors"}
]
keywords = ["sbom", "vex", "software-supply-chain", "vulnerability-prioritization", "cybersecurity-research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security"
]
dependencies = [
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
tools = [
  "pip-audit>=2.7.0",
  "cyclonedx-bom>=5.0.0"
]

[project.scripts]
supplytrace = "supplytrace.cli:app"

[tool.setuptools.packages.find]
include = ["supplytrace*"]

[tool.setuptools.package-data]
"supplytrace.testbed_builder" = ["templates/*.py", "templates/*.js", "metadata_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
